--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Lora:ital,wght@0,400;1,500&family=Roboto+Mono:wght@500&display=swap");
 html, body {
   background: #0C121F;
   height: 100%;
@@ -12,37 +12,128 @@ html, body {
   user-select: none;
 }
 
+.content-container {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .content {
-  position: absolute;
-  width: 75%;
+  width: 80%;
   height: 85%;
-  left: 12.5%;
-  top: 7.5%;
   background-color: #070B17;
-  border: 20px solid #00A286;
-  border-radius: 1%;
-  color: #FFF;
+  border: 0.3rem solid #00A286;
+  border-radius: 0.2%;
+  display: flex;
+  flex-direction: row;
+  color: #F7F9FF;
   text-align: center;
-  font-family: "Roboto Mono", monospace;
   font-size: 5rem;
   z-index: 2;
 }
 
-a {
-  font-size: 0.5em;
-  font-style: italic;
-  cursor: pointer;
-  transition-duration: 0.15s;
-  transform: none;
-  display: inline-block;
-  margin-bottom: 5px;
-  text-decoration: none;
-  color: #FFF;
+.content .title {
+  transform: scale(1);
+  transition: 0.35s;
 }
 
-a:hover {
-  color: #AAA;
-  transform: scaleX(1.1);
+.content .title:hover {
+  transform: scale(1.01);
+  transition: 0.35s;
+}
+
+.content .link-cards div a {
+  transform: scale(1);
+  transition: 0.35s;
+}
+
+.content .link-cards div:hover a {
+  transform: scale(1.03);
+  transition: 0.35s;
+}
+
+.title {
+  font-size: 1.2em;
+  text-decoration: underline;
+  text-decoration-color: #348995;
+  text-decoration-thickness: 0.08em;
+  font-family: "Lora", serif;
+  margin-top: 0.5em;
+  font-style: italic;
+  flex-grow: 4;
+}
+
+.link-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 3;
+}
+
+.link-cards div {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #003D54;
+}
+
+.link-cards div:nth-child(2) {
+  background-color: #006F7B;
+}
+
+/*
+@keyframes typing {
+  from { width: 0% }
+  to { width: 100% }
+}
+*/
+/* The typewriter cursor effect */
+/*
+@keyframes blink-caret {
+  from {
+    border-color: transparent; 
+  } 50% {
+    border-color: #00A286 ;
+  } to {
+    border-color: transparent; 
+  }
+}
+*/
+a {
+  position: relative;
+  font-size: 0.65em;
+  font-family: "Lora", serif;
+  font-style: normal;
+  letter-spacing: 0.05em;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0px;
+  left: 0px;
+  background-color: #F7F9FF;
+  transform: scaleX(0);
+  transition: transform 0.25s ease;
+}
+
+.content .link-cards div:hover a::before {
+  transform: scaleX(1);
 }
 
 .selfie {
@@ -66,64 +157,48 @@ img {
 .dot {
   position: absolute;
   border-radius: 50%;
-  height: 1.4em;
-  width: 1.4em;
+  height: 0.7em;
+  width: 0.7em;
   z-index: 1;
   opacity: 0;
 }
 
 @-webkit-keyframes circular-animation {
   from {
-    -webkit-transform: rotate(0deg) translateX(0.45em);
-    transform: rotate(0deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
   to {
-    -webkit-transform: rotate(360deg) translateX(0.45em);
-    transform: rotate(360deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
 }
 @keyframes circular-animation {
   from {
-    -webkit-transform: rotate(0deg) translateX(0.45em);
-    transform: rotate(0deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
   to {
-    -webkit-transform: rotate(360deg) translateX(0.45em);
-    transform: rotate(360deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
 }
 @-webkit-keyframes circular-animation-reverse {
   from {
-    -webkit-transform: rotate(360deg) translateX(0.45em);
-    transform: rotate(360deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
   to {
-    -webkit-transform: rotate(0deg) translateX(0.45em);
-    transform: rotate(0deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
 }
 @keyframes circular-animation-reverse {
   from {
-    -webkit-transform: rotate(360deg) translateX(0.45em);
-    transform: rotate(360deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
   to {
-    -webkit-transform: rotate(0deg) translateX(0.45em);
-    transform: rotate(0deg) translateX(0.45em);
     -webkit-opacity: 1;
     opacity: 1;
   }
@@ -133,7 +208,7 @@ img {
     opacity: 0;
   }
   to {
-    opacity: 0.8;
+    opacity: 1;
   }
 }
 @keyframes animation-lightup {
@@ -141,61 +216,13 @@ img {
     opacity: 0;
   }
   to {
-    opacity: 0.8;
-  }
-}
-@-webkit-keyframes x-axis {
-  50% {
-    -webkit-transform: translateX(0.3em);
-    transform: translateX(0.3em);
-  }
-}
-@keyframes x-axis {
-  50% {
-    -webkit-transform: translateX(0.3em);
-    transform: translateX(0.3em);
-  }
-}
-@-webkit-keyframes y-axis {
-  50% {
-    -webkit-transform: translateY(-0.3em);
-    transform: translateY(-0.3em);
-  }
-}
-@keyframes y-axis {
-  50% {
-    -webkit-transform: translateY(-0.3em);
-    transform: translateY(-0.3em);
-  }
-}
-@-webkit-keyframes x-axis-reverse {
-  50% {
-    -webkit-transform: translateX(-0.3em);
-    transform: translateX(-0.3em);
-  }
-}
-@keyframes x-axis-reverse {
-  50% {
-    -webkit-transform: translateX(-0.3em);
-    transform: translateX(-0.3em);
-  }
-}
-@-webkit-keyframes y-axis-reverse {
-  50% {
-    -webkit-transform: translateY(0.3em);
-    transform: translateY(0.3em);
-  }
-}
-@keyframes y-axis-reverse {
-  50% {
-    -webkit-transform: translateY(0.3em);
-    transform: translateY(0.3em);
+    opacity: 1;
   }
 }
 .dot.theme-dark-green {
   background: #006F7B;
-  -webkit-animation: circular-animation 4s normal infinite;
-  animation: circular-animation 4s normal infinite;
+  -webkit-animation: circular-animation 5s normal infinite;
+  animation: circular-animation 5s normal infinite;
 }
 
 .dot.theme-dark-green::after {
@@ -209,20 +236,20 @@ img {
   border: 0px;
   opacity: 0;
   background-color: transparent;
-  box-shadow: 0 1px 50px 10px #006F7B;
-  -webkit-animation: animation-lightup 2.4s alternate ease-in infinite;
-  animation: animation-lightup 2.4s alternate ease-in infinite;
+  box-shadow: 0 1px 40px 10px #006F7B;
+  -webkit-animation: animation-lightup 1.8s alternate ease-in infinite;
+  animation: animation-lightup 1.8s alternate ease-in infinite;
 }
 
 .dot.theme-dark-green.reverse {
-  -webkit-animation: circular-animation-reverse 4s normal infinite;
-  animation: circular-animation-reverse 4s normal infinite;
+  -webkit-animation: circular-animation-reverse 5s normal infinite;
+  animation: circular-animation-reverse 5s normal infinite;
 }
 
 .dot.theme-light-green {
   background: #003D54;
-  -webkit-animation: circular-animation 4s normal infinite;
-  animation: circular-animation 4s normal infinite;
+  -webkit-animation: circular-animation 5s normal infinite;
+  animation: circular-animation 5s normal infinite;
 }
 
 .dot.theme-light-green::after {
@@ -236,14 +263,14 @@ img {
   border: 0px;
   opacity: 0;
   background-color: transparent;
-  box-shadow: 0 1px 50px 10px #003D54;
-  -webkit-animation: animation-lightup 2.4s alternate ease-in infinite;
-  animation: animation-lightup 2.4s alternate ease-in infinite;
+  box-shadow: 0 1px 40px 10px #003D54;
+  -webkit-animation: animation-lightup 1.8s alternate ease-in infinite;
+  animation: animation-lightup 1.8s alternate ease-in infinite;
 }
 
 .dot.theme-light-green.reverse {
-  -webkit-animation: circular-animation-reverse 4s normal infinite;
-  animation: circular-animation-reverse 4s normal infinite;
+  -webkit-animation: circular-animation-reverse 5s normal infinite;
+  animation: circular-animation-reverse 5s normal infinite;
 }
 
 /*# sourceMappingURL=style.css.map */
