--- a/app/scss/newfoundland.scss
+++ b/app/scss/newfoundland.scss
@@ -1,5 +1,19 @@
 @use "sass:math";
 
+@mixin keyframes-animation($name) {
+  @-webkit-keyframes #{$name} {
+    @content;
+  }
+  @keyframes #{$name} {
+    @content;
+  }
+};
+
+@mixin prefix-property($name, $value) {
+  -webkit-#{$name}: $value;
+          #{$name}: $value;
+};
+
 $bg-color: #30395C;
 
 html, body, .vsc-initialized {
@@ -28,7 +42,7 @@ html, body, .vsc-initialized {
   justify-content: start;
   flex-wrap: nowrap;
   width: 120%;
-  height: 70%;
+  height: 75%;
   padding: 0px;
   overflow: hidden;
 }
@@ -48,23 +62,35 @@ $percentage-per-house: math.div(1, $max-homes);
 @for $i from 1 to $max-homes {
   .houses-container>img:nth-child(#{$i}) {
     width: #{nth($home-widths, $i) * 100%};
-    max-height: 100%;
-    padding: 0px;
-    margin-left: -3.25px;
-    // height: #{nth($home-heights, $i) * 100%};
+        // height: #{nth($home-heights, $i) * 100%};
   }
 }
 
-
+.houses-container img {
+  max-height: 100%;
+  padding: 0px;
+  box-shadow: 0 -10px 30px 0px #000000;
+}
 
 .wave-container {
-  position: relative;
-  bottom: 0;
+  position: absolute;
   width: 100%;
-  height: 30%;
+  height: 25%;
+  bottom: 0px;
   background: #000000;
   border: 0px;
 }
+
+@include keyframes-animation(move-wave) {
+  from {
+    transform: scaleX(1) translateY(0%);    
+
+  } to {
+    transform: scaleX(1.05) translateY(13%);
+  }
+}
+
+$wave-duration: 5s;
 
 .wave-container::after {
   content: '';
@@ -75,6 +101,9 @@ $percentage-per-house: math.div(1, $max-homes);
   left: 0;
   border: 0px;
   background-image: url("../images/wave.svg");
+  background-size: 45% 100%;
+
+  @include prefix-property(animation, move-wave #{$wave-duration} alternate ease-in-out infinite);
 }
 
 
