--- a/app/scss/newfoundland.scss
+++ b/app/scss/newfoundland.scss
@@ -15,7 +15,8 @@
 };
 
 // $bg-color: #30395C;
-$bg-color: #e2e2e2;
+$bg-color: #d4d4d4;
+$wave-color: #289ddb;
 
 html, body, .vsc-initialized {
   height: 100%;
@@ -23,7 +24,7 @@ html, body, .vsc-initialized {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: #{$bg-color};
+  background: #000000;
 }
 
 .sky-container {
@@ -48,6 +49,11 @@ $main-content-height: 84%;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  border-radius: 0.5em;
+  border-top: .2em solid #{$bg-color};
+  border-bottom: .2em solid #{$bg-color};
+  border-left: .2em solid #{$bg-color};
+  border-right: .2em solid #{$bg-color}
 }
 
 .sky-container .main-content .text-container {
@@ -55,11 +61,159 @@ $main-content-height: 84%;
   font-family: 'Roboto Mono', monospace;
   font-size: 1.15em;
   text-align: center;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 
-$border-box-width: 97%;
-$border-box-height: 93%;
+.sky-container .main-content .text-container .description-container {
+  width: 100%;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
 
+.sky-container .main-content .text-container .description-container div {
+  text-align: center;
+}
+
+.sky-container .main-content .text-container hr {
+  align-content : center;
+  width : 65%;
+  margin-left : auto;
+  margin-right : auto;
+}
+
+.sky-container .main-content .text-container .link-container {
+  width: 100%;
+  height: calc(35% - 4px);
+}
+
+
+.sky-container .main-content .text-container .link-container::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: calc(100% + 6px);
+  height: 0.15em;
+  border: 2px solid black;
+  bottom: -.2em;
+  left: -4px;
+  background-color: #{$wave-color};
+  transform: scaleX(0);
+  transition: transform 0.3s ease-out;
+}
+
+.sky-container .main-content .text-container .link-container:hover::before {
+  transform: scaleX(1);
+}
+
+
+.sky-container .main-content .text-container .link-container a {
+  color: #{$bg-color};
+  text-decoration: none;
+  display: inline-block;
+}
+
+.sky-container .main-content .text-container .link-container a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: calc(50% + 6px);
+  height: 0.15em;
+  border: 2px solid black;
+  bottom: -2px;
+  left: calc(25% - 4px);
+  background-color: #000000;
+  transform: scaleX(0);
+  transition: transform 0.35s ease-out;
+}
+
+.sky-container .main-content .text-container .link-container a:hover::before {
+  transform: scaleX(1);
+  transition: transform 0.35s linear;
+}
+
+/*
+.sky-container .main-content .text-container .link-container a::after {
+  content: "Link";
+  position: absolute;
+  display: block;
+  width: calc(50% + 6px);
+  height: 0.15em;
+  border: 2px solid black;
+  bottom: -2px;
+  left: calc(25% - 4px);
+  background-color: #000000;
+  transition: transform 0.25s linear;
+}
+*/
+
+/*
+.sky-container .main-content .text-container .link-container a::after {
+  content: "Test";
+  position: absolute;
+  display: block;
+  width: calc(50% + 6px);
+  height: 0.15em;
+  border: 2px solid black;
+  bottom: -2px;
+  left: calc(25% - 4px);
+  background-color: #000000;
+  transform: scaleX(0);
+  transition: transform 0.2s linear;
+}
+
+.sky-container .main-content .text-container .link-container a:hover::after {
+  transform: scaleX(1);
+}
+*/
+/*
+.sky-container .main-content .text-container .link-container a::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: calc(100% + 6px);
+  height: 0.15em;
+  border: 2px solid black;
+  bottom: -2px;
+  left: -4px;
+  background-color: #{$wave-color};
+  transform: scaleX(0);
+  transition: transform 0.15s ease;
+}
+
+.sky-container .main-content .text-container .link-container a:hover::after {
+  transform: scaleX(0.25);
+}
+*/
+
+/*
+.sky-container .main-content .text-container .link-container a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 0.5em;
+  bottom: 0px;
+  left: 0px;
+  background-color: #007DB9;
+  transform: scaleX(0);
+  transition: transform 0.25s ease;
+}
+
+.sky-container .main-content .text-container .link-container a:hover::before {
+  transform: scaleX(1);
+}
+*/
+
+
+$border-box-width: 97%;
+$border-box-height: 95%;
+
+/*
 .sky-container .main-content::after {
   content: '';
   position: absolute;
@@ -71,6 +225,7 @@ $border-box-height: 93%;
   background: transparent;
   border: 2px solid #{$bg-color};
 }
+*/
 
 .town-container {
   position: absolute;
@@ -97,7 +252,7 @@ $border-box-height: 93%;
 }
 
 // make sure this matches up with the html
-$max-homes: 20;
+$max-homes: 25;
 $home-heights: ();
 $home-widths: ();
 
@@ -112,20 +267,16 @@ $precision: 0.01;
 @for $i from 1 to $max-homes {
   .houses-container>img:nth-child(#{$i}) {
     width: #{nth($home-widths, $i) * 100%};
+    // random wether the image is flipped or not
+    @if (random(3) > 2) {
+      transform: scaleX(-1);
+    } 
   }
 }
 
 .houses-container img {
   max-height: 100%;
   padding: 0px;
-}
-
-.sky-container .snow {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #acacac;
 }
 
 .wave-container {
@@ -146,20 +297,21 @@ $precision: 0.01;
   }
 }
 
+$boat-animation-altitude: 25%;
 @include keyframes-animation(move-boat) {
   0% {
     transform: translateY(0%);    
     right: -8%;
   } 20% {
-    transform: translateY(7%);    
+    transform: translateY(-#{$boat-animation-altitude});    
   } 40% {
     transform: translateY(0%);    
   } 60% {
-    transform: translateY(7%);    
+    transform: translateY(-#{$boat-animation-altitude});    
   } 80% {
     transform: translateY(0%);    
   } 100% {
-    transform: translateY(0%);    
+    transform: translateY(-#{$boat-animation-altitude});    
     // transform: translateX(-100%) translateY(7%);
     right: 100%;
   }
@@ -167,18 +319,19 @@ $precision: 0.01;
 
 
 $wave-duration: 5s;
-$boat-duration: 35s;
+$boat-duration: 45s;
 
 .wave-container::after {
   content: '';
   position: absolute;
   width: 100%;
-  height: 80%;
+  height: 83%;
   bottom: 0;
   left: 0;
   border: 0px;
+  background: black;
   background-image: url("../images/wave.svg");
-  background-size: 60% 100%;
+  background-repeat: repeat-x;
   @include prefix-property(animation, move-wave #{$wave-duration} alternate ease-in-out infinite);
 }
 
@@ -186,7 +339,7 @@ $boat-duration: 35s;
   position: absolute;
   top: -10%;
   right: -8%;
-  width: 7%;
+  width: 8%;
   z-index: 1;
   @include prefix-property(animation, move-boat #{$boat-duration} linear infinite);
 }
