--- a/app/css/newfoundland.css
+++ b/app/css/newfoundland.css
@@ -26,10 +26,12 @@ html, body, .vsc-initialized {
   justify-content: center;
   align-items: center;
   border-radius: 0.5em;
-  border-top: 0.2em solid #d4d4d4;
-  border-bottom: 0.2em solid #d4d4d4;
-  border-left: 0.2em solid #d4d4d4;
-  border-right: 0.2em solid #d4d4d4;
+  /*
+  border-top: .2em solid #d4d4d4;
+  border-bottom: .2em solid #d4d4d4;
+  border-left: .2em solid #d4d4d4;
+  border-right: .2em solid #d4d4d4
+  */
 }
 
 .sky-container .main-content .text-container {
@@ -53,6 +55,7 @@ html, body, .vsc-initialized {
 
 .sky-container .main-content .text-container .description-container div {
   text-align: center;
+  width: 100%;
 }
 
 .sky-container .main-content .text-container hr {
@@ -62,11 +65,19 @@ html, body, .vsc-initialized {
   margin-right: auto;
 }
 
+.sky-container .main-content .text-container .description-container div hr {
+  align-content: center;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .sky-container .main-content .text-container .link-container {
   width: 100%;
   height: calc(35% - 4px);
 }
 
+/*
 .sky-container .main-content .text-container .link-container::before {
   content: "";
   position: absolute;
@@ -74,7 +85,7 @@ html, body, .vsc-initialized {
   width: calc(100% + 6px);
   height: 0.15em;
   border: 2px solid black;
-  bottom: -0.2em;
+  bottom: -.2em;
   left: -4px;
   background-color: #289ddb;
   transform: scaleX(0);
@@ -84,13 +95,18 @@ html, body, .vsc-initialized {
 .sky-container .main-content .text-container .link-container:hover::before {
   transform: scaleX(1);
 }
-
+*/
 .sky-container .main-content .text-container .link-container a {
   color: #d4d4d4;
   text-decoration: none;
   display: inline-block;
 }
 
+.sky-container .main-content .text-container .link-container a:hover {
+  text-decoration: underline;
+}
+
+/*
 .sky-container .main-content .text-container .link-container a::before {
   content: "";
   position: absolute;
@@ -218,104 +234,104 @@ html, body, .vsc-initialized {
 }
 
 .houses-container > img:nth-child(1) {
-  width: 5.052805531%;
+  width: 4.4434594893%;
 }
 
 .houses-container > img:nth-child(2) {
-  width: 4.0507309685%;
+  width: 4.968046177%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(3) {
-  width: 5.3072618747%;
+  width: 4.7686967985%;
   transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(4) {
-  width: 4.4465223671%;
+  width: 5.499861439%;
 }
 
 .houses-container > img:nth-child(5) {
-  width: 4.7494114446%;
+  width: 5.4913397404%;
 }
 
 .houses-container > img:nth-child(6) {
-  width: 5.1694240967%;
+  width: 4.2639407524%;
 }
 
 .houses-container > img:nth-child(7) {
-  width: 5.2761229601%;
-  transform: scaleX(-1);
+  width: 4.088797304%;
 }
 
 .houses-container > img:nth-child(8) {
-  width: 4.9880141032%;
+  width: 4.1404073191%;
 }
 
 .houses-container > img:nth-child(9) {
-  width: 4.7372028411%;
+  width: 5.3974039861%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(10) {
-  width: 4.8607665482%;
+  width: 4.621028907%;
 }
 
 .houses-container > img:nth-child(11) {
-  width: 4.2449125375%;
-  transform: scaleX(-1);
+  width: 4.1614360625%;
 }
 
 .houses-container > img:nth-child(12) {
-  width: 5.4460880208%;
+  width: 4.3365377696%;
 }
 
 .houses-container > img:nth-child(13) {
-  width: 5.3172133566%;
+  width: 4.7738105803%;
 }
 
 .houses-container > img:nth-child(14) {
-  width: 4.5164800891%;
-  transform: scaleX(-1);
+  width: 4.3795205396%;
 }
 
 .houses-container > img:nth-child(15) {
-  width: 4.8312570356%;
+  width: 4.0716483007%;
 }
 
 .houses-container > img:nth-child(16) {
-  width: 4.1495932299%;
+  width: 5.0154270211%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(17) {
-  width: 5.3282232154%;
+  width: 4.3120294362%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(18) {
-  width: 4.2434840745%;
+  width: 4.6841856231%;
 }
 
 .houses-container > img:nth-child(19) {
-  width: 4.2239060749%;
+  width: 4.9711415237%;
 }
 
 .houses-container > img:nth-child(20) {
-  width: 4.1156369457%;
+  width: 4.5250126675%;
 }
 
 .houses-container > img:nth-child(21) {
-  width: 4.6938513721%;
+  width: 5.4947356207%;
 }
 
 .houses-container > img:nth-child(22) {
-  width: 4.5189026892%;
+  width: 5.3623888925%;
 }
 
 .houses-container > img:nth-child(23) {
-  width: 5.1625034239%;
+  width: 4.9907701842%;
 }
 
 .houses-container > img:nth-child(24) {
-  width: 4.4623903521%;
-  transform: scaleX(-1);
+  width: 4.2854622132%;
 }
 
 .houses-container img {
